<resources>
    <string name="app_name">Проценты</string>
    <string name="goTo">Перейти</string>
    <string name="percent2decimal">Процент в виде десятичной дроби</string>
    <string name="decimal2percent">Десятичная дробь в виде процента</string>
    <string name="fraction2percent">Сколько процентов составляет одно число от другого</string>
    <string name="percentofnumber">Процент от числа</string>
    <string name="numberfrompercent">Число по известному значению процента</string>
    <string name="percentincrease">Повышение на сколько-то процентов</string>
    <string name="percentdecrease">Скидка на сколько-то процентов</string>
    <string name="ex1" formatted="false">Например, 25% = 0,25</string>
    <string name="ex2" formatted="false">Например, 0,05 = 5%</string>
    <string name="ex3" formatted="false">Например, 30 км от 200 км это 15%</string>
    <string name="ex4" formatted="false">Например, 35% от 80 страниц это 28 страниц</string>
    <string name="ex5" formatted="false">Например, 12 пирожков это 25% от какого-то числа, а это число равно 48 пирожкам</string>
    <string name="ex6" formatted="false">Например, обувь стоит 2000 рублей, цена увеличилась на 15%. Новая цена - 2300 рублей</string>
    <string name="ex7" formatted="false">Например, обувь стоит 3000 рублей, скидка - 20%. Новая цена - 2400 рублей</string>
    <string name="ex1_1" formatted="false">Пример: 25% = 25 * 0,01 = 0,25</string>
    <string name="find">Найти</string>
    <string name="ex2_1" formatted="false">Пример: 0,05 = 0,05 * 100% = 5%</string>
    <string name="ex3_1" formatted="false">Пример: 30 от 200. \n30 = x * 200; \nx = 30 : 200 = 0,15 = 15%</string>
    <string name="of">от</string>
    <string name="ex4_1" formatted="false">Пример: 35% от 80. \nx = 0,35 * 80 = 28</string>
    <string name="percentof" formatted="false">% от</string>
    <string name="is">это</string>
    <string name="ex5_1" formatted="false">Пример: 12 это 25%. \n12 = 25% * x; \nx = 12 : 0,25 = 48</string>
    <string name="plus" formatted="false">+</string>
    <string name="ex6_1" formatted="false">Пример: 2000 + 15%. \nx = 2000 * (1 + 0,15) = 2000 * 1,15 = 2300</string>
    <string name="minus" formatted="false">&#8211;</string>
    <string name="ex7_1" formatted="false">Пример: 3000 &#8211; 20%. \nx = 3000 * (1 &#8211; 0,2) = 3000 * 0,8 = 2400</string>
</resources>
